<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">FallDetection</string>

    <string name="header_main_activity">Header of the main activity</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="tap_to_activate">Tap here to activate</string>
    <string name="tap_to_deactivate">Tap here to deactivate</string>
    <string name="number_of_falls_detected">Falls detected:</string>
    <string name="number_of_falls_confirmed">Falls confirmed:</string>

    <string name="action_settings">Settings</string>

    <string name="user_information">User information</string>
    <string name="user_sex">Sex</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="user_age">Age</string>
    <string name="user_age_summary">%s years</string>
    <string name="user_age_dialog_message">Insert your age:</string>
    <string name="user_height">Height</string>
    <string name="user_height_summary">%s cm</string>
    <string name="user_height_dialog_message">Insert your height in centimeters:</string>
    <string name="user_weight">Weight</string>
    <string name="user_weight_summary">%s kg</string>
    <string name="user_weight_dialog_message">Insert your weight in kilograms:</string>
    <string name="alerts">Alerts</string>
    <string name="alerts_send_sms">SMS</string>
    <string name="alerts_send_sms_summary">Send an SMS when a fall is detected</string>
    <string name="alerts_make_call">Phone call</string>
    <string name="alerts_make_call_summary">Make a phone call when a fall is detected</string>
    <string name="alerts_alarm_sound">Alarm sound</string>
    <string name="alerts_alarm_sound_summary">%s</string>
    <string name="alerts_alarm_sound_summary_empty">Play a tone when a fall is detected</string>
    <string name="alerts_interval">Pre-alarm interval</string>
    <string name="alerts_interval_summary">%s seconds</string>
    <string name="alerts_interval_summary_empty">Wait for an interval before alerting the fall</string>
    <string name="alerts_interval_dialog_message">Insert the amount of time (in seconds) to wait before
        alerting the fall:</string>

    <string name="configure_sms">Configure SMS</string>
    <string name="sms_content">Content</string>
    <string name="sms_content_summary">Change the content of the SMS that will be sent</string>
    <string name="sms_content_summary_empty">Specify the content of the SMS that will be sent</string>
    <string name="sms_content_dialog_message">Insert the text of the message that will be sent in case
        of fall:</string>
    <string name="sms_content_default">I have fallen down and I need assistance.</string>
    <string name="sms_content_my_location">My current location is:</string>
    <string name="sms_recipients">Recipients</string>
    <string name="sms_add_location">Location</string>
    <string name="sms_add_location_summary">Add location information using GPS</string>

    <string name="configure_phone_call">Configure phone call</string>
    <string name="phone_call_recipient">Recipient</string>

    <string name="statistics">Statistics</string>
    <string name="statistics_send">Send statistics</string>
    <string name="statistics_send_summary">Send anonymous statistics to a trusted server to improve
        this app</string>

    <string-array name="gender_values">
        <item>m</item>
        <item>f</item>
    </string-array>

    <string name="not_set">(not set)</string>
    <string name="unknown_number">Unknown number</string>
    <string name="no_accelerometer_available">No accelerometer available!</string>
    <string name="no_recipient_specified">No recipient specified</string>

    <string name="fall_detection_service">Fall detection service</string>

    <string name="fall_detected_activity">Fall detected</string>
    <string name="fall_detected">A fall has been detected!</string>
</resources>
