<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/user_information">
        <ListPreference android:key="user_sex" android:title="@string/user_sex"
            android:entryValues="@array/gender_values" android:entries="@array/genders" />
        <EditTextPreference android:key="user_age"
            android:title="@string/user_age" android:dialogMessage="@string/user_age_dialog_message"
            android:gravity="center" android:inputType="numberDecimal">
        </EditTextPreference>
        <EditTextPreference android:key="user_height"
            android:title="@string/user_height" android:dialogMessage="@string/user_height_dialog_message"
            android:gravity="center" android:inputType="numberDecimal">
        </EditTextPreference>
        <EditTextPreference android:key="user_weight"
            android:title="@string/user_weight" android:dialogMessage="@string/user_weight_dialog_message"
            android:gravity="center" android:inputType="numberDecimal">
        </EditTextPreference>
    </PreferenceCategory>

</PreferenceScreen>